wip: first take at all the required functionality
* tailored for local run with act for oss

Co-authored-by: ybelmekk <youssef.bel.mekki@nav.no>
Co-authored-by: sindrerh2 <sindre.rodseth.hansen@nav.no>
Co-authored-by: jksolbakken <jan-kare.solbakken@nav.no>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,10 +8,13 @@ jobs:
       - uses: actions/checkout@v3
       - name: Push image
         run: |
-          docker build . -t ttl.sh/salsa/gotestapp:1h && docker push ttl.sh/salsa/gotestapp:1h
-      - name: Test
+          docker build golang/ -t ttl.sh/salsa/gotestapp:1h && docker push ttl.sh/salsa/gotestapp:1h
+      - name: Generate, sign and upload SBOM
         uses: ./
+        #working-directory: golang
         with:
           ecosystem: 'go'
           image: ttl.sh/salsa/gotestapp:1h
-          maindir: './cmd/testapp'
+          maindir: '.'
+          workdir: 'golang'
+          key: cosign.key
