--- a/golang/Dockerfile
+++ b/golang/Dockerfile
@@ -3,13 +3,13 @@ RUN apk add --no-cache git make curl
 ENV GOOS=linux
 ENV CGO_ENABLED=0
 ENV GO111MODULE=on
-COPY . /src
+COPY .. /src
 RUN ls -la
 WORKDIR /src
-RUN go build -a -installsuffix cgo -o /bin/testapp cmd/testapp/*.go
+RUN go build -a -installsuffix cgo -o /bin/testapp *.go
 
 FROM alpine:3
 RUN export PATH=$PATH:/app
 WORKDIR /app
-COPY --from=builder /src/bin/testapp /app/testapp
+COPY --from=builder /bin/testapp /app/testapp
 ENTRYPOINT ["/app/testapp"]
