--- a/action.yaml
+++ b/action.yaml
@@ -43,11 +43,13 @@ runs:
     # TODO: install and verify checksum etc
     - name: Install cyclonedx-gomod
       if: ${{ inputs.byosbom == '' && inputs.ecosystem == 'go' }}
+      shell: bash
       run: |
         go install github.com/CycloneDX/cyclonedx-gomod/cmd/cyclonedx-gomod@latest
         echo "Installed cyclonedx-gomod"
     - name: CycloneDX GoMod Generate SBOM
       if: ${{ inputs.ecosystem == 'go' }}
+      shell: bash
       run: |
         WORKDIR=${{ inputs.workdir }}
         if [ "$WORKDIR" != "" ]; then
@@ -68,6 +70,7 @@ runs:
         if [ "$WORKDIR" != "" ]; then
           cd $WORKDIR
         fi
+      shell: bash
 
     - name: Attest BYOSBOM
       if: ${{ inputs.byosbom != '' }}
@@ -81,12 +84,14 @@ runs:
           exit 1
         fi
         echo "SBOM=${{ inputs.byosbom }}" >> $GITHUB_ENV
+      shell: bash
 
     - name: Install Cosign
       run: |
         curl https://github.com/sigstore/cosign/releases/download/v2.0.0/cosign-linux-arm -Lo /usr/local/bin/cosign
         chmod +x /usr/local/bin/cosign 
         echo "Installed cosign"
+      shell: bash
 
     - name: Cosign attest and upload to OCI registry
       run: |
@@ -95,3 +100,4 @@ runs:
         export COSIGN_PASSWORD=""
         cosign attest --tlog-upload=false --predicate ${{ inputs.workdir }}/${{ env.SBOM }} --type cyclonedx --key ${{ inputs.workdir }}/${{ inputs.key }} ${{ inputs.image }}
         echo "Attestation finished"
+      shell: bash
