--- a/jvm/maven/pom.xml
+++ b/jvm/maven/pom.xml
@@ -12,6 +12,8 @@
         <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <google.version>2.8.6</google.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <build>
@@ -32,7 +34,8 @@
                     <outputReactorProjects>true</outputReactorProjects>
                     <outputFormat>all</outputFormat>
                     <outputName>bom</outputName>
-                    <outputDirectory>${project.build.directory}</outputDirectory><!-- usually target, if not redefined in pom.xml -->
+                    <outputDirectory>${project.build.directory}
+                    </outputDirectory><!-- usually target, if not redefined in pom.xml -->
                     <verbose>true</verbose><!-- = ${cyclonedx.verbose} -->
                 </configuration>
                 <executions>
