--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -16,17 +16,16 @@ jobs:
         with:
           push: true
           tags: ${{ env.IMAGE }}
-          context: ./golang
+          context: ./npm
       - uses: actions/setup-node@v3
         with:
           node-version: 16
           cache: 'npm'
-      - run: npx @cyclonedx/cyclonedx-npm --output-file bom.json
+          cache-dependency-path: npm/package-lock.json
       - name: Generate, sign and upload SBOM
         uses: ./
         with:
           ecosystem: 'npm'
-          byosbom: npm/bom.json
           image: ${{ env.IMAGE }}@${{ steps.docker_build.outputs.digest }}
           workdir: 'npm'
           key: cosign.key
