--- a/jvm/gradle/build.gradle
+++ b/jvm/gradle/build.gradle
@@ -13,6 +13,11 @@ plugins {
     id("org.cyclonedx.bom") version "1.7.4"
 }
 
+cyclonedxBom {
+    outputName = "sbom"
+    outputFormat = "json"
+}
+
 apply plugin: 'kotlin' 
 
 repositories {
