--- a/jvm/maven/pom.xml
+++ b/jvm/maven/pom.xml
@@ -21,22 +21,14 @@
             <plugin>
                 <groupId>org.cyclonedx</groupId>
                 <artifactId>cyclonedx-maven-plugin</artifactId>
+                <version>2.7.5</version>
                 <configuration>
                     <projectType>library</projectType>
                     <schemaVersion>1.4</schemaVersion>
-                    <includeBomSerialNumber>true</includeBomSerialNumber>
-                    <includeCompileScope>true</includeCompileScope>
-                    <includeProvidedScope>true</includeProvidedScope>
-                    <includeRuntimeScope>true</includeRuntimeScope>
-                    <includeSystemScope>true</includeSystemScope>
-                    <includeTestScope>false</includeTestScope>
-                    <includeLicenseText>false</includeLicenseText>
-                    <outputReactorProjects>true</outputReactorProjects>
-                    <outputFormat>all</outputFormat>
-                    <outputName>bom</outputName>
+                    <outputName>sbom</outputName>
+                    <outputFormat>json</outputFormat>
                     <outputDirectory>${project.build.directory}
                     </outputDirectory><!-- usually target, if not redefined in pom.xml -->
-                    <verbose>true</verbose><!-- = ${cyclonedx.verbose} -->
                 </configuration>
                 <executions>
                     <execution>
