--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -3,8 +3,8 @@ FROM node:16
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
-COPY package.json .
+COPY npm/package.json .
 
-COPY ./ .
+COPY npm .
 
 CMD ["npm","start"]
