--- a/action.yaml
+++ b/action.yaml
@@ -94,12 +94,20 @@ runs:
         echo "Generated Gradle ${{ env.SBOM }}"
 
     - name: Npm CycloneDX sbom
-      if: ${{ inputs.byosbom == '' && inputs.ecosystem == 'npm' }}
+      if: ${{ inputs.byosbom == '' && contains(inputs.ecosystem, 'node') }}
       shell: bash
       run: |
+        ecosystem="${{ inputs.ecosystem }}"
+        build_type="${ecosystem##*:}"
+        if [[ "$build_type" == '' ||  "$build_type" != 'npm' ]]; then
+          echo "a project build type is required for node ecosystem"
+          echo "accepted values are npm"
+          echo "yarn is not supported at the moment"
+          exit 1
+        fi
         cd $WORKDIR
         npx @cyclonedx/cyclonedx-npm --output-file ${{ env.SBOM }}
-        echo "Generated Npm ${{ env.SBOM }}"
+        echo "Generated ${{ inputs.ecosystem }} ${{ env.SBOM }}"
 
     - name: Python CycloneDX sbom
       if: ${{ inputs.byosbom == '' && contains(inputs.ecosystem, 'python') }}
@@ -116,7 +124,7 @@ runs:
         cd $WORKDIR
         pip install cyclonedx-bom
         cyclonedx-py --"$build_type" -o ${{ env.SBOM }} --format json
-        echo "Generated python ${{ env.SBOM }}"
+        echo "Generated ${{ inputs.ecosystem }} ${{ env.SBOM }}"
 
     - name: Attest with byosbom
       if: ${{ inputs.byosbom != '' }}
@@ -133,17 +141,17 @@ runs:
         echo "Using BYOSBOM ${{ env.SBOM }}"
       shell: bash
 
+    # - name: Install Cosign
+    #   uses: sigstore/cosign-installer@main
+    #   with:
+    #     cosign-release: 'v2.0.0'
+    #
     - name: Install Cosign
-      uses: sigstore/cosign-installer@main
-      with:
-        cosign-release: 'v2.0.0'
-
-    #- name: Install Cosign
-    #  run: |
-    #    curl https://github.com/sigstore/cosign/releases/download/v2.0.0/cosign-linux-arm -Lo /usr/local/bin/cosign
-    #    chmod +x /usr/local/bin/cosign
-    #    echo "Installed cosign"
-    #  shell: bash
+      run: |
+        curl https://github.com/sigstore/cosign/releases/download/v2.0.0/cosign-linux-arm -Lo /usr/local/bin/cosign
+        chmod +x /usr/local/bin/cosign
+        echo "Installed cosign"
+      shell: bash
 
     - name: Cosign attest and upload to OCI registry
       run: |
