--- a/action.yaml
+++ b/action.yaml
@@ -141,17 +141,17 @@ runs:
         echo "Using BYOSBOM ${{ env.SBOM }}"
       shell: bash
 
-    # - name: Install Cosign
-    #   uses: sigstore/cosign-installer@main
-    #   with:
-    #     cosign-release: 'v2.0.0'
-    #
     - name: Install Cosign
-      run: |
-        curl https://github.com/sigstore/cosign/releases/download/v2.0.0/cosign-linux-arm -Lo /usr/local/bin/cosign
-        chmod +x /usr/local/bin/cosign
-        echo "Installed cosign"
-      shell: bash
+      uses: sigstore/cosign-installer@main
+      with:
+        cosign-release: 'v2.0.0'
+
+    #- name: Install Cosign
+    #  run: |
+    #    curl https://github.com/sigstore/cosign/releases/download/v2.0.0/cosign-linux-arm -Lo /usr/local/bin/cosign
+    #    chmod +x /usr/local/bin/cosign
+    #    echo "Installed cosign"
+    #  shell: bash
 
     - name: Cosign attest and upload to OCI registry
       run: |
