--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,25 +3,24 @@ updates:
   - package-ecosystem: "gradle"
     directory: "/jvm/gradle"
     schedule:
-      interval: "daily"
-    open-pull-requests-limit: 10
+      interval: "weekly"
   - package-ecosystem: "maven"
     directory: "/jvm/maven"
     schedule:
-      interval: "daily"
-    open-pull-requests-limit: 10
+      interval: "weekly"
   - package-ecosystem: "npm"
-    directory: "/npm"
+    directory: "/node/npm"
     schedule:
-      interval: "daily"
-    open-pull-requests-limit: 10
+      interval: "weekly"
   - package-ecosystem: "go"
     directory: "/go"
     schedule:
-      interval: "daily"
-    open-pull-requests-limit: 10
+      interval: "weekly"
+  - package-ecosystem: "python"
+    directory: "/python"
+    schedule:
+      interval: "weekly"
   - package-ecosystem: github-actions
     directory: "/"
     schedule:
-      interval: daily
-    open-pull-requests-limit: 10
+      interval: "weekly"
