--- a/action.yaml
+++ b/action.yaml
@@ -3,22 +3,24 @@ description: 'Generate, sign and upload SBOM'
 inputs:
   ecosystem:
     description: |-
-      description of the ecosystem to use, accepted values are go, gradle, maven and npm.
-      maven and gradle only supports wrappers. If the application requires private repositories,
+      Description of the ecosystem to use, accepted values are go, gradle and maven.
+      For node, use node:npm and for python use python:poetry etc.
+      Maven and Gradle only supports wrappers. 
+      If the application requires private repositories,
       please see: bring your own sbom alias 'byosbom'
     required: true
   image:
     description: |-
-      image to sign and upload attestation, must be in the form of <image>:<tag>@<digest>
+      Image to sign and upload attestation, must be in the form of <image>:<tag>@<digest>
     required: true
   maindir:
     description: |-
-      maindir go relative to workdir
+      go main directory for sbom generation
     required: false
     default: '.'
   workdir:
     description: |-
-      workdir for sbom generation
+      working directory for sbom generation
     required: false
   key:
     description: |-
@@ -33,7 +35,7 @@ inputs:
   byosbom:
     description: |-
       Bring your own SBOM, use existing SBOM file instead of generating one, must be a json file and 
-      accepted formats are CycloneDX. If the file is not in the root of the repository, please see: workdir
+      accepted formats are CycloneDX. If the file is not in the root of the repository, please see 'workdir'
     required: false
   sbom:
     description: |-
@@ -51,7 +53,6 @@ runs:
     - name: Change directory to workdir
       run: |
         echo WORKDIR=${{ inputs.workdir }} >> $GITHUB_ENV
-        cd ${{ inputs.workdir }}
       shell: bash
 
     - name: Install Go
@@ -68,7 +69,7 @@ runs:
         echo "Installed cyclonedx-gomod"
 
     - name: Go CycloneDX sbom
-      if: ${{ inputs.ecosystem == 'go' }}
+      if: ${{ inputs.byosbom == '' && inputs.ecosystem == 'go' }}
       shell: bash
       run: |
         cd $WORKDIR
