fix(action): rename workdir to context

--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -26,5 +26,5 @@ jobs:
         with:
           ecosystem: 'go'
           image: ${{ env.IMAGE }}@${{ steps.docker_build.outputs.digest }}
-          workdir: ${{ env.CONTEXT }}
+          context: ${{ env.CONTEXT }}
           key: ${{ env.KEY }}
