--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Generate, sign and upload SBOM
         uses: ./
         with:
-          ecosystem: 'node:npm'
+          ecosystem: 'node=npm'
           image: ${{ env.IMAGE }}@${{ steps.docker_build.outputs.digest }}
           context: ${{ env.CONTEXT }}/npm
           key: ${{ env.KEY }}
